--- a/index.CSS
+++ b/index.CSS
@@ -55,6 +55,101 @@ header {
   font-size: 1.8rem;
   cursor: pointer;
 }
+/* cart*/
+.cart {
+  position: fixed;
+  top: 0;
+  right: 0%;
+  width: 360px;
+  min-height: 100vh;
+  padding: 20px;
+  background: var(--bg-color);
+  box-shadow: -2px 0 4px hsl(0 4% 15% 10%);
+  transition: 0.3s;
+}
+
+.cart.active {
+  right: 0;
+}
+.cart-tittle {
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin-top: 2rem;
+}
+.cart-box {
+  display: grid;
+  grid-template-columns: 32% 50% 18%;
+  align-items: center;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+.cart-img {
+  width: 100px;
+  height: 100px;
+  object-fit: contain;
+  padding: 10px;
+}
+.detail-box {
+  display: grid;
+  row-gap: 0.5rem;
+}
+.cart-production-title {
+  font-size: 1rem;
+  text-transform: uppercase;
+}
+.cart-price {
+  font-weight: 500;
+}
+.cart-quantity {
+  border: 1px solid var(--text-color);
+  outline-color: var(--main-color);
+  width: 2.4rem;
+  text-align: center;
+  font-size: 1rem;
+}
+.cart-remove {
+  font-size: 24px;
+  color: var(--main-color);
+  cursor: pointer;
+}
+.total {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 1.5rem;
+  border-top: 1px solid var(--text-color);
+}
+.total-title {
+  font-size: 1rem;
+  font-weight: 600;
+}
+.total-price {
+  margin-left: 0.5rem;
+}
+.btn-buy {
+  display: flex;
+  margin: 1.5rem auto 0 auto;
+  padding: 12px 20px;
+  border: none;
+  background: var(--main-color);
+  color: var(--bg-color);
+  font-size: 1rem;
+  font-weight: 500;
+  cursor: pointer;
+}
+.btn-buy:hover {
+  background: var(--text-color);
+}
+
+#close-cart {
+  position: absolute;
+  top: 1rem;
+  right: 0.8rem;
+  font-size: 2rem;
+  color: var(--text-color);
+  cursor: pointer;
+}
+
 .section-title {
   font-size: 1.5rem;
   font-weight: 600;
@@ -64,12 +159,7 @@ header {
 .shop {
   margin-top: 2rem;
 }
-/*
-.product-img {
-  width: 250px;
-  height: 300px;
-}
-*/
+
 /*Shop content*/
 .shop-content {
   display: grid;
@@ -110,3 +200,9 @@ header {
 .add-cart:hover {
   background: hsl(249, 32%, 17%);
 }
+/*
+.cart-img {
+  width: 200px;
+  height: auto;
+}
+*/
