--- a/index.CSS
+++ b/index.CSS
@@ -35,7 +35,7 @@ header {
   left: 0;
   width: 100%;
   background: var(--bg-color);
-  box-shadow: 0 1px 4px hsl(0, 4%, 15% / 10%);
+  box-shadow: 0 1px 4px hsl(0, 4%, 15%, 10%);
   z-index: 100;
 }
 
@@ -59,12 +59,13 @@ header {
 .cart {
   position: fixed;
   top: 0;
+  /*essai vv -100*/
   right: 0%;
   width: 360px;
   min-height: 100vh;
   padding: 20px;
   background: var(--bg-color);
-  box-shadow: -2px 0 4px hsl(0 4% 15% 10%);
+  box-shadow: 2px 1px 4px hsl(0, 4%, 15%, 10%);
   transition: 0.3s;
 }
 
